2차 login 부분입니다.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/im"
+        android:id="@+id/login_bg_im"
         android:layout_width="1061dp"
         android:layout_height="497dp"
         android:layout_marginTop="8dp"
@@ -28,11 +28,11 @@
         app:layout_constraintGuide_begin="223dp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/login_ic_im"
         android:layout_width="153dp"
         android:layout_height="141dp"
         android:src="@drawable/icon_logo_backsh"
-        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintBottom_toTopOf="@+id/login_id_et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         app:layout_constraintGuide_begin="109dp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/login_id_et"
         android:layout_width="266dp"
         android:layout_height="46dp"
         android:layout_marginStart="8dp"
@@ -55,29 +55,29 @@
         android:singleLine="true"
         android:textColorHint="#ffdba5"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        app:layout_constraintBottom_toTopOf="@+id/login_pw_et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.453"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/login_ic_im"
         tools:ignore="MissingConstraints"
         android:lines="1"/>
 
     <TextView
-        android:id="@+id/iderror"
+        android:id="@+id/login_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="id"
         android:textColor="#ff4040"
         android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintBottom_toTopOf="@+id/login_pw_et"
+        app:layout_constraintStart_toStartOf="@+id/login_id_et"
+        app:layout_constraintTop_toBottomOf="@+id/login_id_et"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/login_pw_et"
         android:layout_width="266dp"
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
@@ -86,29 +86,29 @@
         android:inputType="textPassword"
         android:textColorHint="#ffdba5"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/login_btn_sign"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.453"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/login_id_et"
         android:singleLine="true"
         android:lines="1"/>
 
     <TextView
-        android:id="@+id/passworderror"
+        android:id="@+id/login_pw_errortv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="pass"
         android:textColor="#ff4040"
         android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintBottom_toTopOf="@+id/login_btn_sign"
+        app:layout_constraintStart_toStartOf="@+id/login_pw_et"
+        app:layout_constraintTop_toBottomOf="@+id/login_pw_et"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/login_btn_sign"
         android:layout_width="201dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -117,14 +117,14 @@
         android:text="Sign in"
         android:textColor="#ffb587"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonlog"
+        app:layout_constraintBottom_toTopOf="@+id/login_btn_log"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/login_pw_et" />
 
     <Button
-        android:id="@+id/buttonlog"
+        android:id="@+id/login_btn_log"
         android:layout_width="201dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -139,6 +139,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/login_btn_sign" />
 
 </android.support.constraint.ConstraintLayout>
