--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -6,4 +6,60 @@
     android:layout_height="match_parent"
     tools:context=".ui.TeamDetailActivity">
 
+    <View
+        android:id="@+id/teamDetail_ellipse_view"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:background="@drawable/back_ellipse_default"/>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/teamDetail_card"
+        android:layout_width="300dp"
+        android:layout_height="350dp"
+        android:layout_marginTop="16dp"
+        app:cardBackgroundColor="#a4e6ab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/teamDetail_ellipse_view">
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/teamDetail_team_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Team_Green"
+                android:textColor="#ffffff"
+                android:textSize="41sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/teamDetail_list_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="asdf\nasdf\nasdf"
+                android:textColor="#fff"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/teamDetail_team_tv"
+                app:layout_constraintTop_toBottomOf="@+id/teamDetail_team_tv" />
+
+            <Button
+                android:id="@+id/teamDetail_select_btn"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:textSize="28sp"
+                android:text="선택"
+                android:background="@drawable/back_btn_white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+
 </android.support.constraint.ConstraintLayout>
