--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -141,4 +141,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_btn_sign" />
 
+    <ImageView
+        android:id="@+id/ic_app_log"
+        android:layout_width="159dp"
+        android:layout_height="152dp"
+        android:src="@drawable/ic_activity_ic"
+        app:layout_constraintBottom_toBottomOf="@+id/login_ic_im"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.435"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/login_ic_im"
+        app:layout_constraintVertical_bias="0.0" />
+
 </android.support.constraint.ConstraintLayout>
