--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -138,6 +138,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="180dp" />
+        app:layout_constraintGuide_end="180dp"/>
+
+    <ImageView
+        android:id="@+id/ic_app_log"
+        android:layout_width="159dp"
+        android:layout_height="124dp"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/ic_activity_ic"
+        app:layout_constraintBottom_toBottomOf="@+id/login_ic_im"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/login_ic_im"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
