--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -142,15 +142,14 @@
 
     <ImageView
         android:id="@+id/ic_app_log"
-        android:layout_width="159dp"
-        android:layout_height="124dp"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/ic_activity_ic"
+        android:layout_width="129dp"
+        android:layout_height="137dp"
+        android:src="@drawable/ic_appic"
         app:layout_constraintBottom_toBottomOf="@+id/login_ic_im"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/login_ic_im"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
